/*
Copyright SecureKey Technologies Inc. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/securekey/fabric-snaps/api/protos";


package snapprotos;

enum Status{
    SUCCESS=0;
    FAILED=1;
}

message Request{
    string snapName=1;
    repeated bytes args=2;
}

message Response{
    string error=1;
    Status status=2;
    repeated bytes payload=3;
}


service Snap {
	rpc Invoke(Request) returns (Response) {}
}

